# LISBOA_MultiAgentSystem

./: .dockerignore  .env.example  .gitignore  AUDIT_REPORT_COMPREHENSIVE.md  Dockerfile  LICENSE  PyTorchVerification.py  README.md  app.py  app_TEMP.py  app_v1.py  app_vprod.py  config.py  conftest.py  environment_local_gpu.yml  index.html  pyproject.toml  requirements.txt  requirements_all.txt  requirements_github_action_vectordb.txt  requirements_github_action_webscraping.txt
.github/: copilot-instructions.md
.github/workflows/: data_pipeline.yml  deploy_huggingface_space.yml  sync_transport_runtime_data.yml  sync_vector_db.yml
.streamlit/: config.toml  secrets.example.toml
_/: PromptOnePaper_19.08.md
agent/: __init__.py  base.py  graph.py  llm_factory.py  prompts.py  state.py
agent/agents/: __init__.py  base.py  planner_agent.py  qa_agent.py  researcher_agent.py  supervisor.py  transport_agent.py  weather_agent.py
agent/planning/: __init__.py  evidence.py  models.py  prompts.py  quality.py  renderer.py
agent/prompts/: __init__.py  _system_prompt.py  planner.py  qa.py  researcher.py  supervisor.py  transport.py  weather.py
agent/utils/: __init__.py  deployment_freshness.py  geographic_scope.py  langgraph_compat.py  langsmith_tracing.py  model_connection_probe.py  optimization.py  response_formatter.py  startup_resources.py  usage_costs.py  vector_db_release.py
data/cp/: metadata.json
data/pricing/: llm_model_pricing.json
data/vector_db/: chroma.sqlite3
data/vector_db/156490d7-c4e2-4bea-80ca-039014f1f3b2/: index_metadata.pickle
data/vector_db/4d778515-936f-4dfd-8549-abd1bc9f600e/: index_metadata.pickle
data/vector_db/_sync_state/: lisbon_places.json
data/vector_db/a020ed32-fed6-436b-9bb4-9a80111f8f7e/: index_metadata.pickle
data_collection/: DYNAMIC_FETCHING_ARCHITECTURE.md
data_collection/APIs/: API_IPMA_Metro_Carris_CP.ipynb
data_collection/docs/: turismodelisboa.ipynb
data_collection/docs/Turismo_de_LisboaGuiaPDF/: extracted_text.txt
data_collection/webscraping/: dadosabertos.gov_lisboa.py  events.json  lisbon_datasets.json  lisbon_datasets_clean.json  places.json  visitlisbon.ipynb  visitlisbon_dadosabertoslx.ipynb  visitlisbon_events.py  visitlisbon_places.py
docs/: 00_INDEX.md  01_PROJECT_OVERVIEW.md  02_SYSTEM_ARCHITECTURE.md  03_TOOLS_REFERENCE.md  04_DATA_SOURCES_AND_SCHEMAS.md  05_DEPLOYMENT_AND_OPERATIONS.md  06_FUTURE_ENHANCEMENTS.md  ARCHITECTURE_DIAGRAMS.md  COMPLETE_DOCUMENTATION.md  INDEX.md  LATENCY_OPTIMIZATIONS.md  README.md  VECTORDB_SYNC_SOLUTION.md  carris_api.md  index.html  tools_overview.md
eval/: README.md  __init__.py  benchmark_ablation_analysis.ipynb  dataset.json  eval_framework.py  evaluation_groundtruth_queries.json  evaluation_groundtruth_queries_demo.json  llm_judge.py  run_ablation.py  run_benchmark.py  runtime_utils.py  statistical_analysis.py
eval/human_calibration/: calibration_template.json  run_calibration.py
eval/results/: benchmark_ablation_analysis.executed.ipynb
eval/results/ablation/: ablation_demo_20260326_181047.json  ablation_flat_latest.csv  ablation_results_20260307_200016.json  ablation_results_20260307_212309.json  ablation_results_20260326_174203.json  ablation_results_demo_agentcheck_20260422_105841.json  ablation_results_demo_visualcheck_20260423_105742.json  ablation_summary_latest.csv
eval/results/benchmark/: benchmark_demo_20260326_181316.json  benchmark_final_20260509_171556.json  benchmark_final_20260515_101309.json  benchmark_flat_latest.csv  benchmark_results_20260307_195653.json  benchmark_results_20260307_212028.json  benchmark_results_20260326_171224.json  benchmark_results_demo_agentcheck_20260422_104948.json  benchmark_results_demo_visualcheck_20260423_104953.json  benchmark_smoke_20260409_162918.json  benchmark_summary_latest.csv
eval/results/consistency/: provider_consistency_20260318_160203.json
eval/results/coverage/: coverage_results_20260315_111316.json
eval/results/statistics/: judge_agreement_validation_20260523.csv  paper_results_claim_validation_20260523.csv  statistical_analysis_final_20260509_213958.json  statistical_analysis_final_20260509_213958_ablation.csv  (+4 more)
eval/tests/: README.md  __init__.py  test_benchmark_utils.py  test_cost_accounting.py  test_dataset_integrity.py  test_eval_metrics.py  test_human_calibration.py  test_llm_judge.py  test_statistical_analysis.py  test_validators.py
eval/validators/: __init__.py  response_heuristics.py  transport_validator.py
scripts/: __init__.py  hf_space_entrypoint.py  publish_transport_runtime_data.py  run_prompts.py  run_provider_consistency.py  run_transport_verification.py  syntax_check.py
site/: index.html
tests/: README.md  __init__.py  conftest.py  run_transport_verification.py  syntax_check.py  test_app_ui_metrics.py  test_audit_fixes.py  test_dados_abertos_tool.py  test_deployment_freshness.py  test_eval_groundtruth_routing.py  test_langsmith_tracing.py  test_lisbon_transport.py  test_location_resolution.py  test_metro_api_fallback_messaging.py  test_model_connection_probe.py  test_natural_query_routing.py  test_planner_quality_guards.py  test_prompt_language_parity.py  test_prompt_runner.py  test_prompts.py  test_qa_agent.py  test_qa_integration.py  test_regression_q1_q20.py  test_researcher_broad_attractions_localization.py  test_response_formatting_smoke_fixes.py  test_response_guardrails.py  test_response_quality_regressions.py  test_runtime_analytics.py  test_startup_gate.py  test_tool_coverage_manifest.py  test_tool_prompt_coverage.py  test_transport_parity_and_rendering.py  test_transport_verification_harness.py  test_visitlisboa_api.py  test_visitlisboa_scraper_safety.py
tests/fixtures/: CP_GTFS.json  CP_GTFS_SQLite.sql  Carris_GTFS.json  Carris_GTFS_SQLite.sql  tool_coverage_manifest.json
tools/: __init__.py  carris_api.py  carrismetropolitana_api.py  cp_api.py  dados_abertos.py  ipma_api.py  location_resolver.py  metrolisboa_api.py  runtime_paths.py  transport_api.py  transport_release_assets.py  utils.py  vector_store.py  visitlisboa_api.py  web_knowledge.py
