# ==========================================================================
# Master Thesis - Project Configuration
#   - André Filipe Gomes Silvestre, 20240502
#
# LISBOA: Lisbon Itinerary System Based On AI
# A Multi-Agent Approach for Personalized Tourism and Urban Mobility in Lisbon
#
# Keeps only the minimal setuptools metadata needed for editable installs and
# local package discovery.
# Streamlit Community Cloud uses requirements.txt before pyproject.toml when
# both files are present, so dependency pins live in requirements.txt instead
# of being duplicated here.
# ==========================================================================

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lisboa"
version = "1.0.0"
description = "Multi-agent assistant for Lisbon tourism and resident mobility, grounded in provider data integrations, municipal open data, and retrieval."
authors = [
    { name = "André Filipe Gomes Silvestre", email = "20240502@novaims.unl.pt" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.14"
keywords = [
    "lisbon",
    "tourism",
    "urban-mobility",
    "public-transport",
    "municipal-open-data",
    "multi-agent",
    "rag",
    "langgraph",
    "streamlit",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "tools*", "data_collection*", "eval*"]
exclude = ["tests*", "data*", "docs*", "_*", "__pycache__*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.md", "*.pem"]

[tool.pytest.ini_options]
testpaths = [
    "eval/tests",
]
